--- a/build.gradle
+++ b/build.gradle
@@ -62,4 +62,4 @@ dependencyManagement {
 }
 
 // Call file for publishing package to respective repository
-apply from: 'publishing-github.gradle'
+apply from: 'publishing-maven-central.gradle'
